...
  });

  const showAnalytics = state.emptyKind === "none";

  return (
    <Layout disableScroll style={styles.layout} showOfflineBanner={showAnalytics}>
      <View style={styles.container} testID="statistics-screen">
        <View style={styles.headerPanel}>
          <View style={styles.header}>
            <Text style={styles.title}>{t("statistics:title")}</Text>
            <Text style={styles.subtitle}>{t("statistics:subtitle")}</Text>
          </View>

...
